# Top-k-prefix-search

./: .gitignore  CMakeLists.txt
Top-k-prefix/: main.cpp
Top-k-prefix-search.xcodeproj/: project.pbxproj
Top-k-prefix-search.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Top-k-prefix.xcodeproj/: project.pbxproj
Top-k-prefix.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Top-k-prefix.xcodeproj/xcuserdata/paolocifariello.xcuserdatad/xcschemes/: Top-k-prefix.xcscheme  xcschememanagement.plist
src/: iterator.cpp  iterator.h  main.cpp  node.cpp  node.h  trie.cpp  trie.h
test/: test.cpp
